<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp20"
        android:src="@mipmap/icon_black_back"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/setting_title"
        android:textColor="@color/common_text_color"
        android:textSize="@dimen/sp17" />

    <com.jkcq.viewlibrary.BikeItemView
        android:id="@+id/item_question"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_below="@+id/iv_back"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/shape_layout_grey_bg"
        android:gravity="center_vertical"
        app:itemLeftText="@string/setting_question"
        app:itemLeftTextSize="@dimen/sp16" />

    <com.jkcq.viewlibrary.BikeItemView

        android:id="@+id/item_faceback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_below="@+id/item_question"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/shape_layout_grey_bg"
        android:gravity="center_vertical"
        app:itemLeftText="@string/setting_faceback"
        app:itemLeftTextSize="@dimen/sp16" />

    <com.jkcq.viewlibrary.BikeItemView
        android:id="@+id/item_clear_cach"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_below="@+id/item_faceback"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/shape_layout_grey_bg"
        android:gravity="center_vertical"
        app:itemLeftText="@string/setting_clear_cache"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="0.0M" />

    <com.jkcq.viewlibrary.BikeItemView
        android:id="@+id/item_unit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_below="@+id/item_clear_cach"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/shape_layout_grey_bg"
        android:gravity="center_vertical"
        app:itemLeftText="@string/setting_unit"
        app:itemLeftTextSize="@dimen/sp16"
        app:itemRightText="" />

    <com.jkcq.viewlibrary.BikeItemView
        android:id="@+id/item_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_below="@+id/item_unit"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/shape_layout_grey_bg"
        android:gravity="center_vertical"
        app:itemLeftText="@string/setting_about"
        app:itemLeftTextSize="@dimen/sp16" />

    <TextView
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp25"
        android:background="@drawable/shape_btn_green_bg"
        android:gravity="center"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"></TextView>

</RelativeLayout>